# CytoScnPy

./: .gitignore  .pip-audit-ignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DANGEROUS_CODE.md  Dockerfile  FIX.md  README.md  ROADMAP.md  Security.md  TODO.md  action.yml  clippy.toml  clippy_log.txt  config.toml  deny.toml  example.py  index.html  install.ps1  install.sh  mkdocs.yml  objects.inv  optimization.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_detection.py  sitemap.xml
cytoscnpy/: Cargo.toml  README.md
cytoscnpy/examples/: heap_profile.rs
cytoscnpy/src/: cli.rs  commands.rs  complexity.rs  config.rs  constants.rs  entry_point.rs  framework.rs  halstead.rs  ipynb.rs  lib.rs  linter.rs  main.rs  metrics.rs  output.rs  python_bindings.rs  raw_metrics.rs  settings.rs  test_utils.rs  utils.rs  visitor.rs
cytoscnpy/src/analyzer/: aggregation.rs  builder.rs  fixtures.rs  heuristics.rs  mod.rs  processing.rs  single_file.rs  traversal.rs  types.rs
cytoscnpy/src/analyzer/aggregation/: classify.rs  mod.rs  reachability.rs  sorting.rs  state.rs  taint.rs
cytoscnpy/src/analyzer/single_file/: analyze_code.rs  common.rs  duck_typing.rs  mod.rs  parsed_module.rs  pipeline.rs  process.rs  reference_sync.rs  rule_engine.rs
cytoscnpy/src/cfg/: collector.rs  flow.rs  graph.rs  mod.rs  tests.rs  types.rs
cytoscnpy/src/cfg/builder/: mod.rs  visits.rs
cytoscnpy/src/cli/: commands.rs  options.rs
cytoscnpy/src/clones/: confidence.rs  errors.rs  findings.rs  hasher.rs  mod.rs  normalizer.rs  parser.rs  similarity.rs  types.rs
cytoscnpy/src/clones/detector/: cfg_validation.rs  in_memory.rs  mod.rs  paths.rs
cytoscnpy/src/clones/parser/: expressions.rs  extract.rs  mod.rs  statements.rs  tests.rs  types.rs
cytoscnpy/src/commands/: cc.rs  clones.rs  deps.rs  fix.rs  hal.rs  init.rs  mi.rs  mod.rs  raw.rs  stats.rs  utils.rs
cytoscnpy/src/commands/clones/: findings.rs  fixes.rs  mod.rs  stats.rs
cytoscnpy/src/commands/fix/: apply.rs  apply_plan.rs  mod.rs  plan.rs  ranges.rs
cytoscnpy/src/commands/stats/: collect.rs  markdown.rs  model.rs
cytoscnpy/src/complexity/: analysis.rs  block.rs  mod.rs  visitor.rs
cytoscnpy/src/config/: loader.rs  models.rs  security.rs  tests.rs
cytoscnpy/src/config/whitelist/: mod.rs
cytoscnpy/src/constants/: limits.rs  mod.rs  penalties.rs  pytest_hooks.rs  regexes.rs  sets.rs  taint.rs
cytoscnpy/src/cst/: comments.rs  parser.rs
cytoscnpy/src/entry_point/: config.rs  detection.rs  paths.rs  run.rs
cytoscnpy/src/entry_point/handlers/: deps.rs  metrics.rs  mod.rs  stats.rs
cytoscnpy/src/fix/: rewriter.rs
cytoscnpy/src/framework/: constants.rs  decorators.rs  detect.rs  django.rs  fastapi.rs  helpers.rs  imports.rs  mod.rs  visitor.rs
cytoscnpy/src/halstead/: function_visitor.rs  metrics.rs
cytoscnpy/src/halstead/visitor/: expressions.rs  mod.rs  statements.rs
cytoscnpy/src/metrics/: cognitive_complexity.rs  lcom4.rs
cytoscnpy/src/output/: progress.rs  reports.rs  summary.rs  tables.rs
cytoscnpy/src/report/: assets.rs  generator.rs  github.rs  gitlab.rs  junit.rs  markdown.rs  mod.rs  sarif.rs  templates.rs
cytoscnpy/src/report/generator/: assets.rs  file_views.rs  issues.rs  scoring.rs
cytoscnpy/src/rules/: danger.rs  ids.rs  mod.rs  quality.rs  rule_registry.rs  secrets.rs
cytoscnpy/src/rules/danger/: code_execution.rs  crypto.rs  deserialization.rs  filesystem.rs  frameworks.rs  injection.rs  misc.rs  mod.rs  network.rs  taint_aware.rs  type_inference.rs  utils.rs
cytoscnpy/src/rules/quality/: complexity.rs  mod.rs
cytoscnpy/src/rules/rule_registry/: catalog.rs  lookup.rs  mod.rs  types.rs
cytoscnpy/src/rules/secrets/: compat.rs  entropy.rs  finding.rs  mod.rs  patterns.rs  recognizers.rs  scanner.rs  scoring.rs  tests.rs
cytoscnpy/src/taint/: analyzer.rs  call_graph.rs  config.rs  crossfile.rs  interprocedural.rs  intraprocedural.rs  mod.rs  plugins.rs  propagation.rs  sinks.rs  sources.rs  summaries.rs  types.rs
cytoscnpy/src/taint/intraprocedural/: entry.rs  handlers.rs  mod.rs  sinks.rs
cytoscnpy/src/taint/sinks/: misc.rs  (+5 more)
cytoscnpy/src/test_utils/: cwd_guard.rs  mod.rs  visitor.rs
cytoscnpy/src/utils/: mod.rs  paths.rs
cytoscnpy/src/visitor/: constructor.rs  definition.rs  expr.rs  expr_traversal.rs  function_def.rs  function_def_meta.rs  function_def_params.rs  mod.rs  scope_ops.rs  state.rs  stmt.rs  stmt_assignments.rs  stmt_control_flow.rs  stmt_defs.rs  stmt_imports.rs  stmt_misc.rs  targets.rs  types.rs
cytoscnpy/src/whitelist/: generator.rs  loader.rs  matcher.rs  mod.rs
cytoscnpy/templates/: base.html  clones.html  file_view.html  files.html  issues.html
cytoscnpy/tests/: README.md  absolute_path_test.rs  accuracy_improvements_test.rs  accuracy_test.rs  add_ref_bench.rs  additional_coverage_test.rs  analyze_code_secrets_test.rs  analyzer_test.rs  analyzer_types_test.rs  azure_functions_test.rs  call_graph_expression_coverage_test.rs  call_graph_missing_edges_test.rs  cascading_dead_code_test.rs  class_context_test.rs  class_parity_test.rs  class_reachability_fp_test.rs  cli_error_test.rs  cli_flags_test.rs  cli_json_test.rs  cli_metrics_test.rs  clones_command_test.rs  clones_integration_test.rs  clones_test.rs  cohesion_exemptions_test.rs  commands_test.rs  complex_dynamic_test.rs  complex_real_data_test.rs  complexity_test.rs  config_test.rs  constants_test.rs  coverage_gap_test.rs  danger_config_test.rs  danger_coverage_test.rs  dead_code_precision_regressions_test.rs  decorator_finding_test.rs  deps_test.rs  dynamic_patterns_test.rs  edge_cases_test.rs  entropy_bench.rs  entropy_signature_test.rs  (+89 more)
cytoscnpy/tests/python_files/: danger_corpus.py  extensive_security_corpus.py
cytoscnpy/tests/snapshots/: output_snapshot_test__github_output.snap  output_snapshot_test__gitlab_output.snap  output_snapshot_test__json_output.snap  output_snapshot_test__junit_output.snap  output_snapshot_test__markdown_output.snap  output_snapshot_test__sarif_output.snap  output_snapshot_test__text_output.snap
(+335 files in other folders)
