[package]
name = "cytoscnpy"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "cytoscnpy-bin"

[lib]
name = "cytoscnpy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Binary target with different name to avoid collision with library
[[bin]]
name = "cytoscnpy-bin"
path = "src/main.rs"


[dev-dependencies]
tempfile = "3.10"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
# ruff v0.14.9 (2025-12-11) - latest stable release
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "3f63ea4b504d50eaf3c479de68e4017d2434a160" }
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"
nbformat = "0.15"
regex = "1.10"
anyhow = "1.0"
colored = "3.0"
indicatif = "0.18.3"
comfy-table = "7.1"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
rustc-hash = "2.1.1"
# String optimization: stack-allocated small strings (up to 24 bytes)
compact_str = "0.9"
# Stack-allocated small vectors to avoid heap for small collections
smallvec = "1.15"
# Optional heap profiler
dhat = { version = "0.3", optional = true }
axum = { version = "0.8.8", optional = true }
askama = { version = "0.14.0", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "trace"], optional = true }
open = { version = "5.3.3", optional = true }
notify = { version = "8.2.0", optional = true }
chrono = { version = "0.4.42", optional = true }
futures = { version = "0.3.31", optional = true }
tokio-stream = { version = "0.1.17", features = ["sync"], optional = true }

[features]
default = ["html_report"]
html_report = [
    "dep:axum",
    "dep:askama",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:open",
    "dep:notify",
    "dep:chrono",
    "dep:futures",
    "dep:tokio-stream",
]
# Enable Python bindings (required for building the cdylib)
python-bindings = ["pyo3"]
# Enable this feature to run Python binding tests (requires Python DLL in PATH)
python-tests = ["pyo3/auto-initialize", "python-bindings"]
# Enable heap profiling with dhat
heap-profile = ["dhat"]
chrono = ["dep:chrono"]
futures = ["dep:futures"]
tokio-stream = ["dep:tokio-stream"]

# Inherit lints from workspace
[lints]
workspace = true
